k3ds/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "sree-cloud-devops.online"
    - "*.sree-cloud-devops.online"
    secretName: nginx-tls
  rules:
  - host: sree-cloud-devops.online
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
